# iana-data

./: .gitignore  .yamllint.yml  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: check-coordinates.yaml  tests.yaml  update-data-core.yaml  update-data-monthly.yaml  update-data-tlds.yaml  update-data.yaml  update-iptoasn.yaml
data/manual/: annotations.json  as-org-aliases.json  country-coordinates.json  cultures.json  dependent-territories.json  organizations.json  places.json  supplemental-cctld-rdap.json  tech-aliases.json  tld-manager-aliases.json
data/source/: iana-root.html  icann-gtlds.json  icann-registry-agreement-table.csv
docs/memory/: architecture.md  memory-index.md  product.md
monitoring/checkly/: cctld-rdap.check.ts  checkly.config.ts  info.ts
scripts/: analyze_all_ips.py  analyze_cctld_operators.py  analyze_nameserver_asns.py  analyze_nameserver_ips.py  analyze_operators.py  analyze_tlds_json.py  fetch_place_coordinates.py
scripts/gtlds/: download_gtlds.py
scripts/idn_unicode_scripts/: analyze_idn_scripts.py  generate_idn_script_mapping.py
scripts/registry-agreement-table/: analyze_registry_agreements.py  download_registry_agreement_table.py
src/: __init__.py  cli.py  config.py
src/analyze/: __init__.py  rdap_json.py  root_db_html.py  tlds_txt.py
src/parse/: __init__.py  as_org_aliases.py  country.py  gtlds_json.py  iptoasn.py  manual_annotations.py  organizations.py  rdap_json.py  registry_agreement_csv.py  root_db_html.py  supplemental_cctld_rdap.py  tech_aliases.py  tld_html.py  tld_manager_aliases.py  tlds_txt.py
src/utilities/: __init__.py  cache.py  content_changed.py  download.py  file_io.py  metadata.py  retry.py  urls.py
tests/: __init__.py  conftest.py  test_circular_imports.py  test_cli.py  test_config.py  test_fetch_place_coordinates.py  test_lint_json.py  test_no_production_file_mutations.py  test_production_smoke.py  test_tlds_analysis.py  test_tlds_parsing.py
tests/analyze/: test_rdap_json.py  test_root_db_html.py  test_tlds_txt.py
tests/fixtures/: idn-script-mapping.json
tests/integration/: __init__.py  conftest.py  test_agreements_integrity.py  test_alias_consistency.py  test_build_reconciliation.py  test_cultures_integrity.py  (+6 more)
(+1689 files in other folders)
