[project]
name = "iana-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pycountry==24.6.1",
    "selectolax==0.4.6",
    "tenacity==9.1.2",
]

[tool.uv]
package = true
required-version = "==0.9.11"

[dependency-groups]
dev = [
    "pydeps==3.0.1",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", "dist", "*.egg"]
addopts = "--durations=20 --durations-min=1.0"

[tool.coverage.report]
precision = 0
show_missing = true
skip_covered = false
sort = "cover"  # Sort by coverage % (lowest first) - valid: name, stmts, miss, cover
fail_under = 90  # Fail if overall coverage < 90%
