[project]
name = "iana-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pycountry==26.2.16",
    "selectolax==0.4.9",
    "tenacity==9.1.4",
]

[tool.uv]
package = true
required-version = ">=0.10"

[dependency-groups]
dev = [
    "langcodes==3.5.1",
    "pydeps==3.0.6",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", "dist", "*.egg"]
addopts = "--durations=20 --durations-min=1.0"

[tool.coverage.report]
precision = 0
show_missing = true
skip_covered = false
sort = "cover"  # Sort by coverage % (lowest first) - valid: name, stmts, miss, cover
fail_under = 90  # Fail if overall coverage < 90%
